...
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.stelios.songle.MapsActivity" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonMapToBag"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="MY WORDS"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        android:textStyle="bold" />
    <!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
...
