<?xml version="1.0" encoding="utf-8"?>
<!--
< xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="BagActivity"> -->

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:weightSum="1">

        <TextView
            android:id="@+id/textViewYouHaveCollected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"

            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />

    <ListView
        android:id="@+id/list"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="380dp"
        android:layout_height="310dp"
        android:layout_below="@+id/textViewYouHaveCollected"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="true"

        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:layout_weight="0.64" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/textInputEditTextSong"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/list"
        android:layout_below="@+id/list"
        android:layout_marginTop="15dp"
        android:hint="Input Song Name Here"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButton_guessTheSong"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/colorTextHint"
        android:elevation="0dp"
        android:text="Submit Song"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:weightSum="2"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButtonSurrender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="128dp"
            android:layout_weight="0.02"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/surrender"
            tools:layout_editor_absoluteX="189dp"
            tools:layout_editor_absoluteY="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/imageButtonHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="44dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/hint_icon"
            tools:layout_editor_absoluteX="-6dp"
            tools:layout_editor_absoluteY="0dp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/imageButtonSurrender" />
    </RelativeLayout>


</LinearLayout>

<!--
</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
-->